--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Maps\XQJBXX_Map.cs" />
     <Compile Include="Maps\XXLB_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_DIYSGFJBXX_Map.cs" />
+    <Compile Include="Maps\XXYL\XXYL_HPGJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_HWJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_QPZYJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_TQTJBXX_Map.cs" />
@@ -198,6 +199,7 @@
     <Compile Include="Models\XQJBXX.cs" />
     <Compile Include="Models\XXLB.cs" />
     <Compile Include="Models\XXYL\XXYL_DIYSGFJBXX.cs" />
+    <Compile Include="Models\XXYL\XXYL_HPGJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_HWJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_QPZYJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_TQTJBXX.cs" />
