--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -108,6 +108,7 @@
     <Compile Include="BLL\BZZX_WZJYBLL.cs" />
     <Compile Include="BLL\XXGLBLL.cs" />
     <Compile Include="BLL\XXYL\XXYL_DIYSGFBLL.cs" />
+    <Compile Include="BLL\XXYL\XXYL_HPGBLL.cs" />
     <Compile Include="BLL\XXYL\XXYL_HWBLL.cs" />
     <Compile Include="BLL\XXYL\XXYL_QPZYBLL.cs" />
     <Compile Include="BLL\XXYL\XXYL_TQTBLL.cs" />
