--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -369,6 +369,7 @@
     <Content Include="Areas\Business\Css\ZHBD\WXBD.css" />
     <Content Include="Areas\Business\Css\ZHBD\ZHBD.css" />
     <Content Include="Areas\Business\Css\ZHMM.css" />
+    <Content Include="Areas\Business\Css\ZSJM\ZSJM_CY.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.min.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap.css" />
@@ -554,6 +555,8 @@
     <Content Include="Areas\Business\Scripts\Business\ZHBD\WXBD.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHBD\ZHBD.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHMM.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_CY.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_CYYZ.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\AUTHORS.txt" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\external\jquery\jquery.js" />
@@ -843,6 +846,9 @@
     <Content Include="Areas\Business\Scripts\UEditor\ueditor.js" />
     <Content Include="Areas\Business\Scripts\UEditor\ueditor.parse.min.js" />
     <Content Include="Areas\Business\Scripts\underscore.min.js" />
+    <Content Include="Config\SpringConfig\BLLZSJM.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Config\SpringConfig\BLLLR.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -852,6 +858,7 @@
     <Content Include="Config\SpringConfig\BLLXXYL.xml" />
     <Content Include="Config\SpringConfig\BLLPWKQ.xml" />
     <Content Include="Config\SpringConfig\BLLGY.xml" />
+    <Content Include="Config\SpringConfig\ControllersZSJM.xml" />
     <Content Include="Config\SpringConfig\ControllersLR.xml" />
     <Content Include="Config\SpringConfig\ControllersXXYL.xml" />
     <Content Include="Config\SpringConfig\ControllersCY.xml" />
@@ -972,6 +979,7 @@
     <Compile Include="Areas\Business\Controllers\YXCZController.cs" />
     <Compile Include="Areas\Business\Controllers\ZHBDController.cs" />
     <Compile Include="Areas\Business\Controllers\ZHMMController.cs" />
+    <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_CYController.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\Config.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\ConfigHandler.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\CrawlerHandler.cs" />
@@ -1138,6 +1146,7 @@
     <Content Include="Areas\Business\Views\LR_KQHL\LR_KQHL.cshtml" />
     <Content Include="Areas\Business\Views\LR_TJ\LR_TJ.cshtml" />
     <Content Include="Areas\Business\Views\LR_YJ\LR_YJ.cshtml" />
+    <Content Include="Areas\Business\Views\ZSJM_CY\ZSJM_CY.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
