--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -128,6 +128,7 @@
     <Compile Include="XXYL\IXXYL_YDJSBLL.cs" />
     <Compile Include="XXYL\IXXYL_ZLAMBLL.cs" />
     <Compile Include="ZSJM\IZSJM_CYBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_FZXBBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TianWen.XiaoZhen1Qu.Entities\TianWen.XiaoZhen1Qu.Entities.csproj">
