--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -370,6 +370,7 @@
     <Content Include="Areas\Business\Css\ZHBD\ZHBD.css" />
     <Content Include="Areas\Business\Css\ZHMM.css" />
     <Content Include="Areas\Business\Css\ZSJM\ZSJM_CY.css" />
+    <Content Include="Areas\Business\Css\ZSJM\ZSJM_FZXB.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.min.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap.css" />
@@ -557,6 +558,8 @@
     <Content Include="Areas\Business\Scripts\Business\ZHMM.js" />
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_CY.js" />
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_CYYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_FZXB.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_FZXBYZ.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\AUTHORS.txt" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\external\jquery\jquery.js" />
@@ -1148,6 +1151,7 @@
     <Content Include="Areas\Business\Views\LR_TJ\LR_TJ.cshtml" />
     <Content Include="Areas\Business\Views\LR_YJ\LR_YJ.cshtml" />
     <Content Include="Areas\Business\Views\ZSJM_CY\ZSJM_CY.cshtml" />
+    <Content Include="Areas\Business\Views\ZSJM_FZXB\ZSJM_FZXB.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
