--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -129,6 +129,8 @@
     <Compile Include="XXYL\IXXYL_ZLAMBLL.cs" />
     <Compile Include="ZSJM\IZSJM_CYBLL.cs" />
     <Compile Include="ZSJM\IZSJM_FZXBBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_JCBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_JXBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TianWen.XiaoZhen1Qu.Entities\TianWen.XiaoZhen1Qu.Entities.csproj">
