--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Maps\ZSJM\ZSJM_FZXBJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_JCJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_JXJBXX_Map.cs" />
+    <Compile Include="Maps\ZSJM\ZSJM_MRBJJBXX_Map.cs" />
     <Compile Include="Models\CL\CL_GCCJBXX.cs" />
     <Compile Include="Models\CL\CL_HCJBXX.cs" />
     <Compile Include="Models\CL\CL_JCJBXX.cs" />
@@ -245,6 +246,7 @@
     <Compile Include="Models\ZSJM\ZSJM_FZXBJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_JCJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_JXJBXX.cs" />
+    <Compile Include="Models\ZSJM\ZSJM_MRBJJBXX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
