--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -373,6 +373,7 @@
     <Content Include="Areas\Business\Css\ZSJM\ZSJM_FZXB.css" />
     <Content Include="Areas\Business\Css\ZSJM\ZSJM_JC.css" />
     <Content Include="Areas\Business\Css\ZSJM\ZSJM_JX.css" />
+    <Content Include="Areas\Business\Css\ZSJM\ZSJM_LPXSP.css" />
     <Content Include="Areas\Business\Css\ZSJM\ZSJM_MRBJ.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.min.css" />
@@ -567,6 +568,8 @@
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_JCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_JX.js" />
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_JXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_LPXSP.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_LPXSPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_MRBJ.js" />
     <Content Include="Areas\Business\Scripts\Business\ZSJM\ZSJM_MRBJYZ.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
@@ -995,6 +998,7 @@
     <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_FZXBController.cs" />
     <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_JCController.cs" />
     <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_JXController.cs" />
+    <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_LPXSPController.cs" />
     <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_MRBJController.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\Config.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\ConfigHandler.cs" />
@@ -1167,6 +1171,7 @@
     <Content Include="Areas\Business\Views\ZSJM_JC\ZSJM_JC.cshtml" />
     <Content Include="Areas\Business\Views\ZSJM_JX\ZSJM_JX.cshtml" />
     <Content Include="Areas\Business\Views\ZSJM_MRBJ\ZSJM_MRBJ.cshtml" />
+    <Content Include="Areas\Business\Views\ZSJM_LPXSP\ZSJM_LPXSP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
