--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -147,7 +147,9 @@
     <Compile Include="Maps\ZSJM\ZSJM_CYJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_FZXBJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_JCJBXX_Map.cs" />
+    <Compile Include="Maps\ZSJM\ZSJM_JJHBJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_JXJBXX_Map.cs" />
+    <Compile Include="Maps\ZSJM\ZSJM_JYPXJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_LPXSPJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_MRBJJBXX_Map.cs" />
     <Compile Include="Models\CL\CL_GCCJBXX.cs" />
@@ -246,7 +248,9 @@
     <Compile Include="Models\ZSJM\ZSJM_CYJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_FZXBJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_JCJBXX.cs" />
+    <Compile Include="Models\ZSJM\ZSJM_JJHBJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_JXJBXX.cs" />
+    <Compile Include="Models\ZSJM\ZSJM_JYPXJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_LPXSPJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_MRBJJBXX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
