--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -130,7 +130,9 @@
     <Compile Include="ZSJM\IZSJM_CYBLL.cs" />
     <Compile Include="ZSJM\IZSJM_FZXBBLL.cs" />
     <Compile Include="ZSJM\IZSJM_JCBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_JJHBBLL.cs" />
     <Compile Include="ZSJM\IZSJM_JXBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_JYPXBLL.cs" />
     <Compile Include="ZSJM\IZSJM_LPXSPBLL.cs" />
     <Compile Include="ZSJM\IZSJM_MRBJBLL.cs" />
   </ItemGroup>
