--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -133,7 +133,9 @@
     <Compile Include="BLL\ZSJM\ZSJM_JCBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_CYBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_FZXBBLL.cs" />
+    <Compile Include="BLL\ZSJM\ZSJM_JJHBBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_JXBLL.cs" />
+    <Compile Include="BLL\ZSJM\ZSJM_JYPXBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_LPXSPBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_MRBJBLL.cs" />
     <Compile Include="DAO\DAOBase.cs" />
