--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -137,7 +137,10 @@
     <Compile Include="ZSJM\IZSJM_MRBJBLL.cs" />
     <Compile Include="ZSJM\IZSJM_NYBLL.cs" />
     <Compile Include="ZSJM\IZSJM_QCFWBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_SHFWBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_TSBLL.cs" />
     <Compile Include="ZSJM\IZSJM_WLFWBLL.cs" />
+    <Compile Include="ZSJM\IZSJM_WTMYETBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TianWen.XiaoZhen1Qu.Entities\TianWen.XiaoZhen1Qu.Entities.csproj">
