--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -112,8 +112,9 @@
     <Compile Include="LR\ILR_WDBLL.cs" />
     <Compile Include="LR\ILR_WSBLL.cs" />
     <Compile Include="LR\ILR_YJBLL.cs" />
-    <Compile Include="PFCG_SP\IPFCG_LPBLL.cs" />
-    <Compile Include="PFCG_SP\IPFCG_SPBLL.cs" />
+    <Compile Include="PFCG\IPFCG_FSXMBLL.cs" />
+    <Compile Include="PFCG\IPFCG_LPBLL.cs" />
+    <Compile Include="PFCG\IPFCG_SPBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PWKQ\IPWKQ_DYPBLL.cs" />
     <Compile Include="PWKQ\IPWKQ_QTKQBLL.cs" />
