--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -105,6 +105,7 @@
     <Compile Include="BLL\LR\LR_WDBLL.cs" />
     <Compile Include="BLL\LR\LR_WSBLL.cs" />
     <Compile Include="BLL\LR\LR_YJBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_FSXMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_LPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SPBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_DYPBLL.cs" />
