--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -340,7 +340,9 @@
     <Content Include="Areas\Business\Css\PageCommon.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FSXM.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_LP.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_SJSM.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_SP.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_XBSP.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_DYP.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_QTKQ.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_XFKGWQ.css" />
@@ -528,8 +530,12 @@
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXMYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_LP.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_LPYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_SJSM.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_SJSMYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_SP.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_SPYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_XBSP.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_XBSPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\Public_TP.js" />
     <Content Include="Areas\Business\Scripts\Business\PWKQ\PWKQ_DYP.js" />
     <Content Include="Areas\Business\Scripts\Business\PWKQ\PWKQ_DYPYZ.js" />
@@ -1007,7 +1013,9 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FSXMController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_LPController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_SJSMController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_SPController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_XBSPController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_DYPController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_QTKQController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_XFKGWQController.cs" />
@@ -1230,6 +1238,8 @@
     <Content Include="Areas\Business\Views\PFCG_SP\PFCG_SP.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_LP\PFCG_LP.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_FSXM\PFCG_FSXM.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_XBSP\PFCG_XBSP.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_SJSM\PFCG_SJSM.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
