--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -107,7 +107,9 @@
     <Compile Include="BLL\LR\LR_YJBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_FSXMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_LPBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_SJSMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SPBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_XBSPBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_DYPBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_QTKQBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_XFKGWQBLL.cs" />
